# stones

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  initializer.mjs  styles.css
.github/workflows/: deploy.yml
assets/: board.FCStd
assets/models/: board_collider.blend  board_collider.glb  test.blend  test.glb
infra/: main.tf
infra/bucket/: main.tf  outputs.tf
infra/github_oidc/: main.tf  variables.tf
src/: camera.rs  controls.rs  game.rs  hud.rs  lib.rs  main.rs  menu.rs  physics.rs  picker.rs
